Begun implementation of main page

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -3,11 +3,21 @@
     <head>
         <title>Welcome | Curb-Social-Media</title>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" /
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../css/main.css" />
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1 class="text-center">Curb-Social-Media</h1>
+        <table class="button-table">
+            <tr>
+                <th><button>Add Sites</button></th>
+                <th><button>Edit Sites</button></th>
+            </tr>
+            <tr>
+                <th><button>Set Timer</button></th>
+                <th><button>Settings</button></th>
+            </tr>
+        </table>
         <script src="../js/popup.js"></script>
     </body>
 </html>
