Users can add a site and its name and it will be stored in their sync storage

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -7,17 +7,23 @@
         <link rel="stylesheet" href="../css/main.css" />
     </head>
     <body>
-        <h1 class="text-center">Curb-Social-Media</h1>
+        <h1 class="title">Curb-Social-Media</h1>
+        <h2 class="active-sites-title">Current Blocked Sites:</h2>
+        <ul id="site-list"></ul>
         <table class="button-table">
             <tr>
-                <th><button>Add Sites</button></th>
+                <th><button id="add-btn">Add Sites</button></th>
                 <th><button>Edit Sites</button></th>
             </tr>
             <tr>
                 <th><button>Set Timer</button></th>
-                <th><button>Settings</button></th>
+                <th><button>Statistics</button></th>
+            </tr>
+            <tr>
+                <th colspan="2"><button>Settings</button></th>
             </tr>
         </table>
         <script src="../js/popup.js"></script>
+        <script src="../js/nav.js"></script>
     </body>
 </html>
