Has bugs, but can check and block sites from being looked at

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -13,7 +13,7 @@
         <table class="button-table">
             <tr>
                 <th><button id="add-btn">Add Sites</button></th>
-                <th><button>Edit Sites</button></th>
+                <th><button id="edit-btn">Edit Sites</button></th>
             </tr>
             <tr>
                 <th><button>Set Timer</button></th>
