--- a/src/html/timer.html
+++ b/src/html/timer.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Blocked | Curb-Social-Media</title>
+        <title>Set Timer | Curb-Social-Media</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../css/main.css" />
     </head>
     <body>
-        <h1>This site is blocked!</h1>
-        <button>Set timer</button>
-        <button>Disable for today</button>
-        
+        <h1>Set Timer</h1>
+
+
+        <button class="return-btn" id="return-btn">Back</button>
         <script src="../js/nav.js"></script>
-        <script src="../js/edit.js"></script>
     </body>
 </html>
