--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -1,5 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
-    <body></body>
+    <head>
+        <title>Edit Sites | Curb-Social-Media</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="../css/main.css" />
+    </head>
+    <body>
+        <h1>Edit Sites</h1>
+
+        <div class="site-container" id="site-container">
+            <p>Site: <span id="site-name"></span></p>
+            <p>URL: <span id="site-url"></span></p>
+
+
+            <div class="navigation-buttons">
+                <button id="prev-btn">Previous</button>
+                <button id="next-btn">Next</button>
+                <button id="delete-btn">Delete Site</button>
+            </div>
+            
+        </div>
+
+        <button class="return-btn" id="return-btn">Back</button>
+        <script src="../js/nav.js"></script>
+        <script src="../js/edit.js"></script>
+    </body>
 </html>
