Fixed up some issues with adding sites to extension. Added breathing exercise to blocked site. Started work on creating timer

--- a/src/html/blocked-site.html
+++ b/src/html/blocked-site.html
@@ -4,14 +4,22 @@
         <title>Blocked | Curb-Social-Media</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../css/main.css" />
+        <link rel="stylesheet" href="../css/blocked.css" />
     </head>
     <body>
         <h1>This site is blocked!</h1>
-        <button>Set timer</button>
+        <div class="breathing-container">
+            <h2>While you're here...try out this breathing exercise.</h2>
+            <div class="circle" id="circle">
+                <span id="circle-text" class="circle-text">Breathe</span>
+            </div>
+            <button id="start-breathing">Start Breathing Exercise</button>
+        </div>
+        <button id="timer-btn">Set timer</button>
         <button>Disable for today</button>
         
         <script src="../js/nav.js"></script>
         <script src="../js/edit.js"></script>
+        <script src="../js/breathe1.js"></script>
     </body>
 </html>
