--- a/src/html/main.html
+++ b/src/html/main.html
@@ -16,7 +16,7 @@
                 <th><button id="edit-btn">Edit Sites</button></th>
             </tr>
             <tr>
-                <th><button>Set Timer</button></th>
+                <th><button id="timer-btn">Set Timer</button></th>
                 <th><button>Statistics</button></th>
             </tr>
             <tr>
