Users can now add specified times they do not want to use a site.

--- a/src/html/add.html
+++ b/src/html/add.html
@@ -15,6 +15,10 @@
                 <input type="text" id="site-name" name="site-name" required>
                 <label for="site-url">URL:</label>
                 <input type="text" id="site-url" name="site-url" required placeholder="https://www...">
+                <label for="start-time">Start Time:</label>
+                <input type="time" id="start-time" name="start-time">
+                <label for="end-time">End Time:</label>
+                <input type="time" id="end-time" name="end-time">
                 <input type="submit" value="Submit">
             </form>
         </div>
