--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -12,6 +12,8 @@
         <div class="site-container" id="site-container">
             <p>Site: <span id="site-name"></span></p>
             <p>URL: <span id="site-url"></span></p>
+            <p>Start Time: <span id="start-time"></span></p>
+            <p>End Time: <span id="end-time"></span></p>
 
 
             <div class="navigation-buttons">
