--- a/src/html/blocked-site.html
+++ b/src/html/blocked-site.html
@@ -9,14 +9,14 @@
     <body>
         <h1>This site is blocked!</h1>
         <div class="breathing-container">
-            <h2>While you're here...try out this breathing exercise.</h2>
+            <h2>While you're here...try out a breathing exercise.</h2>
             <div class="circle" id="circle">
                 <span id="circle-text" class="circle-text">Breathe</span>
             </div>
             <button id="start-breathing">Start Breathing Exercise</button>
         </div>
-        <button id="timer-btn">Set timer</button>
-        <button>Disable for today</button>
+
+        <h2>Use these exercises to help relax and refocus on your goals!</h2>
         
         <script src="../js/nav.js"></script>
         <script src="../js/edit.js"></script>
