Fixed error occurring when deleting sites

--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../css/main.css" />
+        <link rel="stylesheet" href="../css/edit.css" />
     </head>
     <body>
         <h1>Edit Sites</h1>
@@ -18,13 +19,14 @@
 
             <div class="navigation-buttons">
                 <button id="prev-btn">Previous</button>
-                <button id="next-btn">Next</button>
                 <button id="delete-btn">Delete Site</button>
+                <button id="next-btn">Next</button>
+            </div>
+            <div class="return-button">
+                <button class="return-btn" id="return-btn">Back</button>
             </div>
             
         </div>
-
-        <button class="return-btn" id="return-btn">Back</button>
         <script src="../js/nav.js"></script>
         <script src="../js/edit.js"></script>
     </body>
