Final bug fixes prior to recording video for hackathon

--- a/src/html/add.html
+++ b/src/html/add.html
@@ -21,10 +21,13 @@
                 <input type="time" id="end-time" name="end-time">
                 <input type="submit" value="Submit">
             </form>
+
+            <div class="return-button">
+                <button class="return-btn" id="return-btn">Back</button>
+            </div>
         </div>
 
 
-        <button class="return-btn" id="return-btn">Back</button>
 
 
         <script src="../js/nav.js"></script>
