--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Edit Sites | Curb-Social-Media</title>
+        <title>View Sites | Curb-Social-Media</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../css/main.css" />
         <link rel="stylesheet" href="../css/edit.css" />
     </head>
     <body>
-        <h1>Edit Sites</h1>
+        <h1>View Sites</h1>
 
         <div class="site-container" id="site-container">
             <p>Site: <span id="site-name"></span></p>
@@ -16,17 +16,20 @@
             <p>Start Time: <span id="start-time"></span></p>
             <p>End Time: <span id="end-time"></span></p>
 
-
             <div class="navigation-buttons">
                 <button id="prev-btn">Previous</button>
                 <button id="delete-btn">Delete Site</button>
                 <button id="next-btn">Next</button>
             </div>
+
             <div class="return-button">
                 <button class="return-btn" id="return-btn">Back</button>
             </div>
             
         </div>
+
+
+        
         <script src="../js/nav.js"></script>
         <script src="../js/edit.js"></script>
     </body>
