--- a/src/html/timer.html
+++ b/src/html/timer.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../css/main.css" />
+        <link rel="stylesheet" href="../css/timer.css" />
     </head>
     <body>
         <h1>Set Timer</h1>
@@ -16,15 +17,15 @@
                 <label for="timer-length">Length (In Minutes):</label>
                 <input type="number" id="timer-length" name="timer-length" required>
                 <label for="timer-sites">Sites to be Accessed (One Per Line):</label>
-                <textarea id="timer-sites" name="timer-sites" required></textarea>
-                <label for="save-timer">Save Timer?</label>
-                <input type="checkbox" id="save-timer" name="save-timer">
+                <textarea id="timer-sites" name="timer-sites" required rows="5" cols="25"></textarea>
                 <button type="submit">Set Timer</button>
+            </form>
+            <p id="timer-in-progress-msg" style="display: none; color: red;">A timer is already in progress. Please wait until it completes.</p>
+            <div class="return-button">
+                <button class="return-btn" id="return-btn">Back</button>
+            </div>
         </div>
 
-        <button>Saved Timers</button>
-
-        <button class="return-btn" id="return-btn">Back</button>
         <script src="../js/nav.js"></script>
         <script src="../js/timer.js"></script>
     </body>
